// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditPledgeForm matches snapshot with 1 pledge 1`] = `
<form novalidate="novalidate" role="form" class="w-full bg-white p-8 rounded-xl shadow-lg min-h-full overflow-y-scroll" style="max-height: 90vh;">
  <div class="flex justify-between">
    <h2 class="text-2xl font-semibold">

    </h2> <button class="text-black self-start cursor-pointer"><span class="icon"><fontawesomeicon-stub icon="fas,times"></fontawesomeicon-stub></span></button>
  </div>
  <p class="mb-4">

  </p>
  <div class="field mb-4"><label for="sponsorFirstName" class="inline-block mb-1 pl-2 text-gray-700 text-sm">

    </label>
    <div class="control"><input id="sponsorFirstName" type="text" class="input"></div>
    <!---->
  </div>
  <div class="field mb-4"><label for="first_name" class="inline-block mb-1 pl-2 text-gray-700 text-sm">

    </label>
    <div class="control"><input id="sponsorLastName" type="text" name="last_name" class="input"></div>
    <!---->
  </div>
  <div class="field mb-4"><label for="first_name" class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div><input id="sponsorEmail" type="email" name="sponsor_email" class="input"></div>
    <!---->
  </div>
  <div class="field mb-4"><label for="first_name" class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div>
      <the-mask-stub mask="(###) ###-####" tokens="[object Object]" type="tel" name="phone_number" class="input"></the-mask-stub>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select id="state" class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select id="country" class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="mb-4 block"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label for="pledgeAmount" class="inline-block mb-1 pl-2 text-gray-700 text-sm">

    </label>
    <div class="control has-icons-left"><input id="pledgeAmount" type="text" name="pledge_amount" class="input form-input"> <span class="icon is-left">
                $
            </span></div>
    <!---->
  </div>
  <div class="mb-8 text-center">
    <p class="text-lg text-center">

    </p>
    <p class="text-2xl font-bold">
      $90 - $105
    </p>
  </div>
  <div class="text-center mb-6"></div>
  <div class="px-8"><button type="submit" class="button is-secondary is-rounded is-fullwidth shadow-md mb-3 bg-secondary text-white font-bold border">

    </button> <button class="button is-danger is-rounded is-fullwidth shadow-md mb-3 bg-red-700 text-white font-bold border">

    </button> <button class="button is-outlined is-rounded is-fullwidth shadow-md mb-3 bg-white text-gray-600 font-bold border">

    </button></div>
</form>
`;

exports[`EditPledgeForm matches snapshot with multiple pledges 1`] = `
<form novalidate="novalidate" role="form" class="w-full bg-white p-8 rounded-xl shadow-lg min-h-full overflow-y-scroll" style="max-height: 90vh;">
  <div class="flex justify-between">
    <h2 class="text-2xl font-semibold">

    </h2> <button class="text-black self-start cursor-pointer"><span class="icon"><fontawesomeicon-stub icon="fas,times"></fontawesomeicon-stub></span></button>
  </div>
  <p class="mb-4">

  </p>
  <div class="field mb-4"><label for="sponsorFirstName" class="inline-block mb-1 pl-2 text-gray-700 text-sm">

    </label>
    <div class="control"><input id="sponsorFirstName" type="text" class="input"></div>
    <!---->
  </div>
  <div class="field mb-4"><label for="first_name" class="inline-block mb-1 pl-2 text-gray-700 text-sm">

    </label>
    <div class="control"><input id="sponsorLastName" type="text" name="last_name" class="input"></div>
    <!---->
  </div>
  <div class="field mb-4"><label for="first_name" class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div><input id="sponsorEmail" type="email" name="sponsor_email" class="input"></div>
    <!---->
  </div>
  <div class="field mb-4"><label for="first_name" class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div>
      <the-mask-stub mask="(###) ###-####" tokens="[object Object]" type="tel" name="phone_number" class="input"></the-mask-stub>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select id="state" class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select id="country" class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="mb-4 block"><label class="inline-block mb-1 pl-2 text-gray-700 text-sm"></label>
    <div class="control">
      <div class="select w-full"><select class="input form-select w-full"></select></div>
    </div>
    <!---->
  </div>
  <div class="field mb-4"><label for="pledgeAmount" class="inline-block mb-1 pl-2 text-gray-700 text-sm">

    </label>
    <div class="control has-icons-left"><input id="pledgeAmount" type="text" name="pledge_amount" class="input form-input"> <span class="icon is-left">
                $
            </span></div>
    <!---->
  </div>
  <div class="mb-8 text-center">
    <p class="text-lg text-center">

    </p>
    <p class="text-2xl font-bold">
      $9
    </p>
  </div>
  <div class="text-center mb-6"></div>
  <div class="px-8"><button type="submit" class="button is-secondary is-rounded is-fullwidth shadow-md mb-3 bg-secondary text-white font-bold border">

    </button> <button class="button is-danger is-rounded is-fullwidth shadow-md mb-3 bg-red-700 text-white font-bold border">

    </button> <button class="button is-outlined is-rounded is-fullwidth shadow-md mb-3 bg-white text-gray-600 font-bold border">

    </button></div>
</form>
`;
